[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[tool.uv]
concurrent-installs = 1

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
