[project]
name = "hexlet-code"
version = "0.1.0"
authors = [{ name = "Daria Sotnikova" }]
description = "This project compiles 5 console games to train your brain."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[tool.uv]
concurrent-installs = 1

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
